--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 dist: trusty
 
 python:
-  - 2.7
+#  - 2.7
   - 3.4
 virtualenv:
     system_site_package: true
@@ -18,7 +18,7 @@ before_install:
 install:
     make build
 script:
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then python -m unittest discover; fi
+# - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then python -m unittest discover; fi
  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python -m unittest discover; fi
 notifications:
   email: 
