--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,14 @@ script:
 notifications:
   email: 
     - stuart.chapman@seronecapital.com
+before_deploy:
+  cd home/travis/build/stuartjchapman/pyql/quantlib
+  zip pyql_sjc
+deploy:
+#  local_dir: C:\dev\pyql
+  provider: releases
+  user: "stuartjchapman"
+  password: "YaG-fdM-7nQ-7SF"
+  file: "pyql_sjc.zip"
+  skip_cleanup: true
+  overwrite: true 
